AnalizadorSIC_GRAFICO/obj/Release/GramaticaSIC_XEParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\lluis\Desktop\9no Semestre\Labo ProDeSistemas\Practica12\Proyecto LISTO\AnalizadorSIC_GRAFICO\AnalizadorSIC_GRAFICO\GramaticaSIC_XE.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AnalizadorSIC_GRAFICO {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class GramaticaSIC_XEParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, OP1=5, OP2=6, REG=7, REGCONV=8, SUMEXT=9, 
		TIPODIRECTIVA=10, DIRSTART=11, DIREND=12, TRSUB=13, CODOP=14, CONSTCAD=15, 
		CONSTHEX=16, ID=17, DIRBYTE=18, FINL=19, TAB=20, NUM=21, INDICE=22, COMPNUM=23, 
		WS=24;
	public const int
		RULE_programa = 0, RULE_inicio = 1, RULE_final = 2, RULE_entrada = 3, 
		RULE_proposiciones = 4, RULE_proposicion = 5, RULE_formato = 6, RULE_for1 = 7, 
		RULE_for2 = 8, RULE_for34 = 9, RULE_directiva = 10, RULE_etiqueta = 11, 
		RULE_simple = 12, RULE_indirecto = 13, RULE_inmediato = 14, RULE_indexado = 15, 
		RULE_opdirectiva = 16, RULE_tipoByte = 17, RULE_registros = 18, RULE_opBase = 19;
	public static readonly string[] ruleNames = {
		"programa", "inicio", "final", "entrada", "proposiciones", "proposicion", 
		"formato", "for1", "for2", "for34", "directiva", "etiqueta", "simple", 
		"indirecto", "inmediato", "indexado", "opdirectiva", "tipoByte", "registros", 
		"opBase"
	};

	private static readonly string[] _LiteralNames = {
		null, "'BASE'", "'@'", "'#'", "','", null, null, null, null, "'+'", null, 
		"'START'", "'END'", "'RSUB'", null, null, null, null, "'BYTE'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "OP1", "OP2", "REG", "REGCONV", "SUMEXT", 
		"TIPODIRECTIVA", "DIRSTART", "DIREND", "TRSUB", "CODOP", "CONSTCAD", "CONSTHEX", 
		"ID", "DIRBYTE", "FINL", "TAB", "NUM", "INDICE", "COMPNUM", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GramaticaSIC_XE.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public GramaticaSIC_XEParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramaContext : ParserRuleContext {
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
	 
		public ProgramaContext() { }
		public virtual void CopyFrom(ProgramaContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ProgramIniContext : ProgramaContext {
		public InicioContext inicio() {
			return GetRuleContext<InicioContext>(0);
		}
		public ProposicionesContext proposiciones() {
			return GetRuleContext<ProposicionesContext>(0);
		}
		public FinalContext final() {
			return GetRuleContext<FinalContext>(0);
		}
		public ProgramIniContext(ProgramaContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterProgramIni(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitProgramIni(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgramIni(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_programa);
		try {
			_localctx = new ProgramIniContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; inicio();
			State = 41; proposiciones(0);
			State = 42; final();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InicioContext : ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
	 
		public InicioContext() { }
		public virtual void CopyFrom(InicioContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class InicioProContext : InicioContext {
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public InicioProContext(InicioContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterInicioPro(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitInicioPro(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicioPro(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class InicioEtiContext : InicioContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode[] TAB() { return GetTokens(GramaticaSIC_XEParser.TAB); }
		public ITerminalNode TAB(int i) {
			return GetToken(GramaticaSIC_XEParser.TAB, i);
		}
		public ITerminalNode DIRSTART() { return GetToken(GramaticaSIC_XEParser.DIRSTART, 0); }
		public ITerminalNode NUM() { return GetToken(GramaticaSIC_XEParser.NUM, 0); }
		public ITerminalNode FINL() { return GetToken(GramaticaSIC_XEParser.FINL, 0); }
		public InicioEtiContext(InicioContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterInicioEti(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitInicioEti(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicioEti(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_inicio);
		try {
			State = 52;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new InicioEtiContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 44; etiqueta();
				State = 45; Match(TAB);
				State = 46; Match(DIRSTART);
				State = 47; Match(TAB);
				State = 48; Match(NUM);
				State = 49; Match(FINL);
				}
				break;

			case 2:
				_localctx = new InicioProContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 51; proposicion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FinalContext : ParserRuleContext {
		public FinalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_final; } }
	 
		public FinalContext() { }
		public virtual void CopyFrom(FinalContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EndfinaltotalContext : FinalContext {
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode[] TAB() { return GetTokens(GramaticaSIC_XEParser.TAB); }
		public ITerminalNode TAB(int i) {
			return GetToken(GramaticaSIC_XEParser.TAB, i);
		}
		public ITerminalNode DIREND() { return GetToken(GramaticaSIC_XEParser.DIREND, 0); }
		public EntradaContext entrada() {
			return GetRuleContext<EntradaContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(GramaticaSIC_XEParser.Eof, 0); }
		public EndfinaltotalContext(FinalContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterEndfinaltotal(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitEndfinaltotal(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEndfinaltotal(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FinEntradaContext : FinalContext {
		public ITerminalNode[] TAB() { return GetTokens(GramaticaSIC_XEParser.TAB); }
		public ITerminalNode TAB(int i) {
			return GetToken(GramaticaSIC_XEParser.TAB, i);
		}
		public ITerminalNode DIREND() { return GetToken(GramaticaSIC_XEParser.DIREND, 0); }
		public EntradaContext entrada() {
			return GetRuleContext<EntradaContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(GramaticaSIC_XEParser.Eof, 0); }
		public FinEntradaContext(FinalContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterFinEntrada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitFinEntrada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFinEntrada(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FinalSinEntradaContext : FinalContext {
		public ITerminalNode TAB() { return GetToken(GramaticaSIC_XEParser.TAB, 0); }
		public ITerminalNode DIREND() { return GetToken(GramaticaSIC_XEParser.DIREND, 0); }
		public ITerminalNode Eof() { return GetToken(GramaticaSIC_XEParser.Eof, 0); }
		public FinalSinEntradaContext(FinalContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterFinalSinEntrada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitFinalSinEntrada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFinalSinEntrada(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FinalContext final() {
		FinalContext _localctx = new FinalContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_final);
		try {
			State = 70;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new FinEntradaContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 54; Match(TAB);
				State = 55; Match(DIREND);
				State = 56; Match(TAB);
				State = 57; entrada();
				State = 58; Match(Eof);
				}
				break;

			case 2:
				_localctx = new EndfinaltotalContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 60; etiqueta();
				State = 61; Match(TAB);
				State = 62; Match(DIREND);
				State = 63; Match(TAB);
				State = 64; entrada();
				State = 65; Match(Eof);
				}
				break;

			case 3:
				_localctx = new FinalSinEntradaContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 67; Match(TAB);
				State = 68; Match(DIREND);
				State = 69; Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntradaContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(GramaticaSIC_XEParser.ID, 0); }
		public EntradaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entrada; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterEntrada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitEntrada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntrada(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntradaContext entrada() {
		EntradaContext _localctx = new EntradaContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_entrada);
		try {
			State = 74;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 72; Match(ID);
				}
				break;
			case Eof:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProposicionesContext : ParserRuleContext {
		public ProposicionesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposiciones; } }
	 
		public ProposicionesContext() { }
		public virtual void CopyFrom(ProposicionesContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ProposicionDuplicadaContext : ProposicionesContext {
		public ProposicionesContext proposiciones() {
			return GetRuleContext<ProposicionesContext>(0);
		}
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public ProposicionDuplicadaContext(ProposicionesContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterProposicionDuplicada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitProposicionDuplicada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposicionDuplicada(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ProposicionInstContext : ProposicionesContext {
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public ProposicionInstContext(ProposicionesContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterProposicionInst(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitProposicionInst(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposicionInst(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionesContext proposiciones() {
		return proposiciones(0);
	}

	private ProposicionesContext proposiciones(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		ProposicionesContext _localctx = new ProposicionesContext(_ctx, _parentState);
		ProposicionesContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_proposiciones, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ProposicionInstContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 77; proposicion();
			}
			_ctx.stop = _input.Lt(-1);
			State = 83;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ProposicionDuplicadaContext(new ProposicionesContext(_parentctx, _parentState));
					PushNewRecursionContext(_localctx, _startState, RULE_proposiciones);
					State = 79;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 80; proposicion();
					}
					} 
				}
				State = 85;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class ProposicionContext : ParserRuleContext {
		public ProposicionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposicion; } }
	 
		public ProposicionContext() { }
		public virtual void CopyFrom(ProposicionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PropsicionInstruccionContext : ProposicionContext {
		public FormatoContext formato() {
			return GetRuleContext<FormatoContext>(0);
		}
		public PropsicionInstruccionContext(ProposicionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterPropsicionInstruccion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitPropsicionInstruccion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropsicionInstruccion(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ErrorContext : ProposicionContext {
		public ErrorContext(ProposicionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterError(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitError(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitError(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ProposicionDirectivaContext : ProposicionContext {
		public DirectivaContext directiva() {
			return GetRuleContext<DirectivaContext>(0);
		}
		public ProposicionDirectivaContext(ProposicionContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.EnterProposicionDirectiva(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGramaticaSIC_XEListener typedListener = listener as IGramaticaSIC_XEListener;
			if (typedListener != null) typedListener.ExitProposicionDirectiva(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramaticaSIC_XEVisitor<TResult> typedVisitor = visitor as IGramaticaSIC_XEVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposicionDirectiva(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionContext proposicion() {
		ProposicionContext _localctx = new ProposicionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_proposicion);
		try {
			State = 89;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new PropsicionInstruccionContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 86; formato();
				}
				break;

			case 2:
				_localctx = new ProposicionDirectivaContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 87; directiva();
				}
				break;

			case 3:
				_localctx = new ErrorContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 88;
				MatchWildcard();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
